Added interceptor for preventing SSO
A signature service MUST never use SSO. Therefore, we added an
interceptor flow that prevents SSO for a signature service even if it
sets the ForceAuthn-flag of the AuthnRequest to false.

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -4,6 +4,7 @@
 
   <artifactId>shibboleth-base-bom</artifactId>
   <packaging>pom</packaging>
+  <version>1.4.2-SNAPSHOT</version>
 
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
@@ -46,7 +47,7 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>shibboleth-sweid-extensions</artifactId>
-        <version>1.4.1</version>
+        <version>1.4.2-SNAPSHOT</version>
         <type>jar</type>
         <scope>provided</scope>
       </dependency>
