--- a/parent-pom/pom.xml
+++ b/parent-pom/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.4.3-SNAPSHOT</version>
+  <version>1.4.3</version>
 
   <name>Swedish eID :: Parent POM for Swedish eID :: Shibboleth IdP base</name>
   <description>Parent POM for base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -46,7 +46,7 @@
 
     <shibboleth.version>3.3.1</shibboleth.version>
     
-    <shibboleth-base-dependency-bom.version>1.3.3-SNAPSHOT</shibboleth-base-dependency-bom.version>
+    <shibboleth-base-dependency-bom.version>1.3.3</shibboleth-base-dependency-bom.version>
     
     <!-- Needed only for the Javadoc plugin (we don't get the versions from the BOM). -->
     <opensaml.version>3.3.0</opensaml.version>
