--- a/attribute-support/pom.xml
+++ b/attribute-support/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
     <artifactId>shibboleth-base-parent</artifactId>
-    <version>1.4.3</version>
+    <version>1.4.4-SNAPSHOT</version>
     <relativePath>../parent-pom</relativePath>
   </parent>
 
