--- a/idp/pom.xml
+++ b/idp/pom.xml
@@ -4,6 +4,7 @@
 
   <artifactId>shibboleth-base</artifactId>
   <packaging>pom</packaging>  
+  <version>1.4.6-SNAPSHOT</version>
 
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
