--- a/authn-support/pom.xml
+++ b/authn-support/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>se.litsec.sweid.idp</groupId>
     <artifactId>shibboleth-base-parent</artifactId>
-    <version>1.5.0-SNAPSHOT</version>
+    <version>1.5.0</version>
     <relativePath>../parent-pom</relativePath>
   </parent>
 
@@ -32,10 +32,15 @@
       <organizationUrl>http://www.litsec.se</organizationUrl>
     </developer>
   </developers>
+  
+  <organization>
+    <name>Litsec AB</name>
+    <url>http://www.litsec.se</url>
+  </organization>  
 
   <properties>
-    <shibboleth-attribute-support.version>1.5.0-SNAPSHOT</shibboleth-attribute-support.version>
-    <shibboleth-sweid-extensions.version>1.5.0-SNAPSHOT</shibboleth-sweid-extensions.version>
+    <shibboleth-attribute-support.version>1.5.0</shibboleth-attribute-support.version>
+    <shibboleth-sweid-extensions.version>1.5.0</shibboleth-sweid-extensions.version>
   </properties>
 
   <dependencies>
