--- a/dependency-bom/pom.xml
+++ b/dependency-bom/pom.xml
@@ -5,7 +5,7 @@
   <groupId>se.litsec.sweid.idp</groupId>
   <artifactId>shibboleth-base-dependency-bom</artifactId>
   <packaging>pom</packaging>
-  <version>1.5.0-SNAPSHOT</version>
+  <version>1.5.0</version>
 
   <name>Swedish eID :: Dependency BOM :: Shibboleth IdP base dependencies</name>
   <description>BOM (Bill of Materials) for dependencies for users of the base packaging of Shibboleth IdP 3.X for the Swedish eID Framework</description>
@@ -33,11 +33,16 @@
       <organizationUrl>http://www.litsec.se</organizationUrl>
     </developer>
   </developers>
+  
+  <organization>
+    <name>Litsec AB</name>
+    <url>http://www.litsec.se</url>
+  </organization>  
 
   <properties>
     <opensaml.version>3.4.0</opensaml.version>
-    <opensaml-ext.version>1.2.0-SNAPSHOT</opensaml-ext.version>
-    <opensaml.swedish-eid.version>1.2.0-SNAPSHOT</opensaml.swedish-eid.version>
+    <opensaml-ext.version>1.2.0</opensaml-ext.version>
+    <opensaml.swedish-eid.version>1.2.0</opensaml.swedish-eid.version>
 
     <shibboleth.version>3.4.0</shibboleth.version>
     <shibboleth.java-support.version>7.4.0</shibboleth.java-support.version>
